[package]
name = "get_win_media_playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.28.0", features = ["full", "tracing"] }
[dependencies.windows]
version = "0.43.0"
features = [
    "Media_Control",
    "Media",
    "Foundation",
    "Foundation_Collections",
]
